Reduce serilog levels

--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -28,7 +28,7 @@ Planned features include:
     <li>Integration with social media, such as automatic posting of results to Twitter.</li>
     <li>Import and Export to integrate with existing scoring software.</li>
     <li>Result trend reporting: Are your races growing?</li>
-    <li>Track scheduled and cancelled races.</li>
+    <li>Track scheduled and abandoned races.</li>
     <li><s>Quick result entry, especially on mobile devices.</s> <em>Complete, Q1 2019</em></li>
     <li><s>Support for overlapping series. (Races can be included in multiple series.)</s> <em>Complete, Q1 2019</em></li>
 </ul>
