--- a/SailScores.Web/custom.scss
+++ b/SailScores.Web/custom.scss
@@ -57,7 +57,7 @@ body {
     background: #f3cf9b;
 }
 
-.canceled {
+.abandoned {
     background: #FFBBBB;
     align-content: center;
     text-align: center;
