--- a/SailScores.Web/Views/Shared/_LoginPartial.cshtml
+++ b/SailScores.Web/Views/Shared/_LoginPartial.cshtml
@@ -6,7 +6,7 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
-        <a class="nav-link" asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">@UserManager.GetUserName(User)</a>
+        <a class="nav-link" href="/Identity/Account/Manage/ChangePassword" title="Change Password">@UserManager.GetUserName(User)</a>
         <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
     </form>
 }
