Misc content updates

--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -5,9 +5,9 @@
 
 <h3>Sailing scoring kept simple.</h3>
 <p>
-    Sailscores makes publishing sail race
-    results simple and fast. It should be simple enough that the
-    scores can be entered from a phone on the water. And once they've
+    SailScores makes publishing sail race results simple and
+    fast. Simple enough that the scores can be entered and shared
+    from a phone on the water. And once they've
     got scores, competitors and clubs should be able to review scores
     in many ways, from many devices, viewing trends and specifics.
 </p>
@@ -28,14 +28,16 @@ Planned features include:
     <li>Integration with social media, such as automatic posting of results to Twitter.</li>
     <li>Import and Export to integrate with existing scoring software.</li>
     <li>Result trend reporting: Are your races growing?</li>
-    <li>Track scheduled and abandoned races.</li>
+    <li>Support for regattas and/or integration with regatta management.</li>
+    <li>Fields to track race conditions, with eventual analysis for competitors in different conditions.</li>
+    <li><s>Track scheduled and abandoned races.</s> <em>Complete, Q2 2019</em></li>
     <li><s>Quick result entry, especially on mobile devices.</s> <em>Complete, Q1 2019</em></li>
     <li><s>Support for overlapping series. (Races can be included in multiple series.)</s> <em>Complete, Q1 2019</em></li>
 </ul>
 <br />
 <h3>Feedback</h3>
 <p>
-    Please send feed back! Use the email addresses below, reach out on Twitter @@SailScores or via Github.
+    Please send feedback! Use the email addresses below, reach out on Twitter @@SailScores or via Github.
 </p>
 
 <br />
