--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -10,11 +10,12 @@
         <h4>SailScores features</h4>
         <ul>
             <li>Fast, simple result entry using the web.</li>
-            <li>Series and clubs have easy to remember direct links to pages.</li>
+            <li>Easy-to-remember and shareable direct links to series and landing pages.</li>
             <li>Support for overlapping series. (Races can be included in multiple series.)</li>
             <li>Options available to import results from SailWave.</li>
             <li>Open-source, volunteer-driven.</li>
             <li>Club landing page can include links to home page or results on other systems.</li>
+            <li>Smartphone, MacOS, and Windows friendly.</li>
         </ul>
     </div>
     <div class="col-md-6">
