--- a/SailScores.Web/Views/Race/Delete.cshtml
+++ b/SailScores.Web/Views/Race/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model SailScores.Core.Model.Race
+﻿@model SailScores.Web.Models.SailScores.RaceViewModel
 
 <h3>Are you sure you want to delete this race?</h3>
 <div>
