--- a/SailScores.Web/Views/Series/Details.cshtml
+++ b/SailScores.Web/Views/Series/Details.cshtml
@@ -11,9 +11,12 @@
 }
 
 <h2>@Model.Item.Name</h2>
-@Model.Item.FlatResults.NumberOfSailedRaces races sailed 
-with @Model.Item.FlatResults.NumberOfDiscards discards, 
-@Model.Item.FlatResults.Competitors.Count() competitors
+@if(!String.IsNullOrWhiteSpace(Model.Item.Description)) {
+    <h5>@Model.Item.Description</h5>
+}
+    @Model.Item.FlatResults.NumberOfSailedRaces races sailed
+    with @Model.Item.FlatResults.NumberOfDiscards discards,
+    @Model.Item.FlatResults.Competitors.Count() competitors
 <div class="table-responsive-sm">
     <table class="table table-hover table-sm">
         <thead>
