Set returnUrl in login partial view

--- a/SailScores.Web/Views/Shared/_LoginPartial.cshtml
+++ b/SailScores.Web/Views/Shared/_LoginPartial.cshtml
@@ -12,5 +12,5 @@
 }
 else
 {
-    <a class="nav-link pt-0" asp-area="" asp-controller="Account" asp-action="Login">Log in</a>
+    <a class="nav-link pt-0" asp-area="" asp-controller="Account" asp-action="Login" asp-route-returnUrl="@Context.Request.Path">Log in</a>
 }
