--- a/SailScores.Web/Views/Race/Edit.cshtml
+++ b/SailScores.Web/Views/Race/Edit.cshtml
@@ -42,6 +42,11 @@
             <span asp-validation-for="Description" class="text-danger"></span>
         </div>
         <div class="form-group">
+            <label asp-for="TrackingUrl" class="control-label">Tracking Url<em>&ensp;Optional</em></label>
+            <input asp-for="TrackingUrl" class="form-control" />
+            <span asp-validation-for="TrackingUrl" class="text-danger"></span>
+        </div>
+        <div class="form-group">
             <label asp-for="FleetId" class="control-label">Fleet<em>&ensp;Controls the list of available competitors</em></label>
             <select id="fleetId" asp-for="FleetId" class="form-control" onchange="window.SailScores.loadFleet()">
                 <option selected="selected">Select a fleet...</option>
@@ -127,59 +132,60 @@
             </li>
             @foreach (var score in Model.Scores)
             {
-        <li id="@score.CompetitorId" class="list-group-item"
-            data-competitorid="@score.CompetitorId" data-originalScore="@score.Place">
-            <div class="d-flex w-100">
-                <div class="d-none d-md-block">
-                    <button class="btn btn-light" type="button" onclick="window.SailScores.moveUp()"><span class="fa fa-angle-up"></span></button>
-                    <button class="btn btn-light" type="button" onclick="window.SailScores.moveDown()"><span class="fa fa-angle-down"></span></button>
+                <li id="@score.CompetitorId" class="list-group-item"
+                    data-competitorid="@score.CompetitorId" data-originalScore="@score.Place">
+                    <div class="d-flex w-100">
+                        <div class="d-none d-md-block">
+                            <button class="btn btn-light" type="button" onclick="window.SailScores.moveUp()"><span class="fa fa-angle-up"></span></button>
+                            <button class="btn btn-light" type="button" onclick="window.SailScores.moveDown()"><span class="fa fa-angle-down"></span></button>
+                            &ensp;
+                            <button class="btn btn-light delete-button" type="button" data-toggle="modal"
+                                    data-target="#deleteConfirm" data-competitorid="@score.CompetitorId"
+                                    onclick="window.SailScores.confirmDelete()">
+                                <span class="far fa-trash-alt text-danger"></span>
+                            </button>
+                        </div>
+                        &ensp;
+                        <div>
+                            <span class="badge badge-secondary badge-pill race-place"></span>
+                        </div>
+                        <div>
+                            <span class="sail-number">@score.Competitor.SailNumber</span>
+                        </div>
+                        <div>
+                            <span class="competitor-name h5">@score.Competitor.Name</span>
+                        </div>
+                        <div class="float-right d-none d-md-flex ml-auto">
+                            <select class="select-code form-control form-control-sm" onchange="window.SailScores.calculatePlaces()">
+                                <option value="No Code">No Code</option>
+                                @foreach (var code in Model.ScoreCodeOptions)
+                                {
+                                    <option value="@code.Name" selected="@(score.Code == code.Name)">@code.Name: @code.Description.Left(40)</option>
+                                }
+                            </select>
+                        </div>
+                    </div>
+                    <div class="float-left pl-3 d-block d-md-none">
+                        <button class="btn btn-light" type="button" onclick="window.SailScores.moveUp()"><span class="fa fa-angle-up"></span></button>
+                        <button class="btn btn-light" type="button" onclick="window.SailScores.moveDown()"><span class="fa fa-angle-down"></span></button>
+                        &ensp;
+                        <button class="btn btn-light delete-button" type="button" data-toggle="modal"
+                                data-target="#deleteConfirm" data-competitorid="@score.CompetitorId"
+                                onclick="window.SailScores.confirmDelete()">
+                            <span class="far fa-trash-alt text-danger"></span>
+                        </button>
+                    </div>
                     &ensp;
-                    <button class="btn btn-light delete-button" type="button" data-toggle="modal"
-                            data-target="#deleteConfirm" data-competitorid="@score.CompetitorId"
-                            onclick="window.SailScores.confirmDelete()">
-                        <span class="far fa-trash-alt text-danger"></span>
-                    </button>
-                </div>
-                &ensp;
-                <div>
-                    <span class="badge badge-secondary badge-pill race-place"></span>
-                </div>
-                <div>
-                    <span class="sail-number">@score.Competitor.SailNumber</span>
-                </div>
-                <div>
-                    <span class="competitor-name h5">@score.Competitor.Name</span>
-                </div>
-                <div class="float-right d-none d-md-flex ml-auto">
-                    <select class="select-code form-control form-control-sm" onchange="window.SailScores.calculatePlaces()">
-                        <option value="No Code">No Code</option>
-                        @foreach (var code in Model.ScoreCodeOptions)
-                        {
-                            <option value="@code.Name" selected="@(score.Code == code.Name)">@code.Name: @code.Description.Left(40)</option>
-                        }
-                    </select>
-                </div>
-            </div>
-            <div class="float-left pl-3 d-block d-md-none">
-                <button class="btn btn-light" type="button" onclick="window.SailScores.moveUp()"><span class="fa fa-angle-up"></span></button>
-                <button class="btn btn-light" type="button" onclick="window.SailScores.moveDown()"><span class="fa fa-angle-down"></span></button>
-                &ensp;
-                <button class="btn btn-light delete-button" type="button" data-toggle="modal"
-                        data-target="#deleteConfirm" data-competitorid="@score.CompetitorId"
-                        onclick="window.SailScores.confirmDelete()">
-                <span class="far fa-trash-alt text-danger"></span></button>
-            </div>
-            &ensp;
-                <div class="float-right d-block d-md-none">
-                    <select class="select-code form-control form-control-sm" onchange="window.SailScores.calculatePlaces()">
-                        <option value="No Code">No Code</option>
-                        @foreach (var code in Model.ScoreCodeOptions)
-                        {
-                            <option value="@code.Name" selected="@(score.Code == code.Name)">@code.Name: @code.Description.Left(20)</option>
-                        }
-                    </select>
-                </div>
-            </li>
+                    <div class="float-right d-block d-md-none">
+                        <select class="select-code form-control form-control-sm" onchange="window.SailScores.calculatePlaces()">
+                            <option value="No Code">No Code</option>
+                            @foreach (var code in Model.ScoreCodeOptions)
+                            {
+                                <option value="@code.Name" selected="@(score.Code == code.Name)">@code.Name: @code.Description.Left(20)</option>
+                            }
+                        </select>
+                    </div>
+                </li>
             }
         </ul>
         <hr />
