--- a/SailScores.Web/Views/Series/Details.cshtml
+++ b/SailScores.Web/Views/Series/Details.cshtml
@@ -66,7 +66,7 @@
                     {
                         if (firstRow)
                         {
-                            <td rowspan="@(Model.Item.FlatResults?.Competitors?.Count() ?? 1)" class="abandoned">
+                            <td rowspan="@(Model.Item.FlatResults?.Competitors?.Count() ?? 1)" class="abandoned d-none d-sm-table-cell">
                                 <span>ABANDONED</span>
                             </td>
                         }
@@ -75,7 +75,7 @@
                     {
                         if (firstRow)
                         {
-                            <td rowspan="@(Model.Item.FlatResults?.Competitors?.Count() ?? 1)" class="scheduled">
+                            <td rowspan="@(Model.Item.FlatResults?.Competitors?.Count() ?? 1)" class="scheduled d-none d-sm-table-cell">
                                 <span>SCHEDULED</span>
                             </td>
                         }
@@ -107,7 +107,7 @@
                     }
 
                 }
-                @if ((Model.Item.FlatResults?.Races?.Count() ?? 0) > 4)
+                @if ((Model.Item.FlatResults.NumberOfSailedRaces) > 4)
                 {
                     <th class="d-table-cell d-md-none">@comp.Name</th>
                 }
